--- a/crowd-wisdom.html
+++ b/crowd-wisdom.html
@@ -14,7 +14,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h3 id="title">🌐 Crowd Wisdom 🧠</h3>
+    <div id="title">
+        <h3>🌐 Crowd Wisdom 🧠</h3>
+        <p>v 1.2</p>
+    </div>
     <div id="pregame" class="mode">
         <p>Enter player names & question:</p>
         <input id="playerNames" placeholder="Dolce,Gabana,MatzaBright..."/><br>
@@ -27,7 +30,7 @@
         <h1 id="question" class="question">#question#</h1>
         <div id="playerInputDiv">
             <h3 id="currentPlayerName">loading...</h3>
-            <input id="playerInput" type="number" placeholder="make a guess..."/><br>
+            <input id="playerInput" placeholder="make a guess..."/><br>
             <button onclick="submitAns()">Submit</button>
         </div>
     </div>
@@ -74,7 +77,7 @@
 
     #title {
         background-color: #FC9F10;
-        padding: 20px;
+        padding: 5px;
         margin: 0;
         box-shadow: 10px 10px 40px -2px rgba(0,0,0,0.3);
         font-family: 'Playfair Display', serif;
