--- a/crowd-wisdom.html
+++ b/crowd-wisdom.html
@@ -106,6 +106,7 @@
         background-color: #FC9F10;
         border-style: none;
         border-radius: 5px;
+        color: black;
     }
 
     input {
