--- a/crowd-wisdom.html
+++ b/crowd-wisdom.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <div id="title">
-        <h3>🌐 Crowd Wisdom 🧠</h3>
-        <p>v 1.2</p>
+        <h3 class="mainHeader">🌐 Crowd Wisdom 🧠</h3>
+        <p class="version">v 1.2</p>
     </div>
     <div id="pregame" class="mode">
         <p>Enter player names & question:</p>
@@ -59,6 +59,16 @@
     </div>
 </body>
 <style>
+
+    .version {
+        color: #ffd089;
+        font-style: italic;
+        margin: 0;
+    }
+
+    .mainHeader {
+        font-size:x-large;
+    }
 
     .horizontalDiv {
         display: flex;
@@ -107,6 +117,7 @@
         border-style: none;
         border-radius: 5px;
         color: black;
+        width: 50%;
     }
 
     input {
@@ -114,6 +125,9 @@
         padding: 5px;
         width: 90%;
         font-size: larger;
+        border-width: 3px;
+        border-color: #FC9F10;
+        border-style: solid;
     }
 
     #game {
