--- a/crowd-wisdom.html
+++ b/crowd-wisdom.html
@@ -16,10 +16,10 @@
 <body>
     <div id="title">
         <h3 class="mainHeader">🌐 Crowd Wisdom 🧠</h3>
-        <p class="version">v 1.2</p>
+        <p class="version">v 1.3</p>
     </div>
     <div id="pregame" class="mode">
-        <p>Enter player names & question:</p>
+        <p>Enter player names, and a question:</p>
         <input id="playerNames" placeholder="Dolce,Gabana,MatzaBright..."/><br>
         <input id="creativeQuestion" placeholder="Enter Question Here"/><br>
         <div style="display: none;"><input id="creative" type="checkbox"/><span>use database question</span><br></div>
@@ -206,11 +206,13 @@
     }
 
     function playAgain() {
-        location.href = 'http://' + location.hostname + '/' + playerNames.join('&');
+        //location.href = /*'http://' +*/ location.hostname + '/' + playerNames.join('&');
+        location.assign(location.origin + '/' + playerNames.join('&'));
     }
 
     function backToStart() {
-        location.href = 'http://' + location.hostname;
+        //location.href = /*'http://' +*/ location.hostname;
+        location.assign(location.origin);
     }
 
     function showAnswer() {
