--- a/crowd-wisdom.html
+++ b/crowd-wisdom.html
@@ -19,11 +19,11 @@
 <body>
     <div id="title">
         <h3 class="mainHeader">🌐 Crowd Wisdom 🧠</h3>
-        <p class="version">v 1.4</p>
+        <p class="version">(v 1.5) By: Nimi</p>
     </div>
     <div id="pregame" class="mode">
         <!---p>Enter:</p--->
-        <input id="playerNames" placeholder="Dolce,Gabana,MatzaBright..."/><br>
+        <input id="playerNames" placeholder="Name1,Name2..."/><br>
         <input id="creativeQuestion" placeholder="Enter Question Here"/><br>
         <div style="display: none;"><input id="creative" type="checkbox"/><span>use database question</span><br></div>
         <br><br>
